fix Practice Now modal ui bug on mobile

--- a/client/assets/custom.scss
+++ b/client/assets/custom.scss
@@ -473,6 +473,14 @@ body {
   justify-content: center;
 }
 
+.wrap-and-grow {
+  display: flex;
+  flex-wrap: wrap;
+  & button {
+    flex-grow: 1;
+  }
+}
+
 .reverse-for-900 {
   @media (min-width: 900px) {
     flex-direction: row-reverse;
